# backend/app/api/static/docs/swagger.json
@@ -2196,12 +2196,13 @@
         "repo.MaintenanceEntry": {
             "type": "object",
             "properties": {
+                "completedDate": {
+                    "description": "Sold",
+                    "type": "string"
+                },
                 "cost": {
                     "type": "string",
                     "example": "0"
-                },
-                "date": {
-                    "type": "string"
                 },
                 "description": {
                     "type": "string"
@@ -2211,23 +2212,32 @@
                 },
                 "name": {
                     "type": "string"
+                },
+                "scheduledDate": {
+                    "description": "Sold",
+                    "type": "string"
                 }
             }
         },
         "repo.MaintenanceEntryCreate": {
             "type": "object",
             "properties": {
+                "completedDate": {
+                    "description": "Sold",
+                    "type": "string"
+                },
                 "cost": {
                     "type": "string",
                     "example": "0"
-                },
-                "date": {
-                    "type": "string"
                 },
                 "description": {
                     "type": "string"
                 },
                 "name": {
+                    "type": "string"
+                },
+                "scheduledDate": {
+                    "description": "Sold",
                     "type": "string"
                 }
             }
@@ -2235,17 +2245,22 @@
         "repo.MaintenanceEntryUpdate": {
             "type": "object",
             "properties": {
+                "completedDate": {
+                    "description": "Sold",
+                    "type": "string"
+                },
                 "cost": {
                     "type": "string",
                     "example": "0"
-                },
-                "date": {
-                    "type": "string"
                 },
                 "description": {
                     "type": "string"
                 },
                 "name": {
+                    "type": "string"
+                },
+                "scheduledDate": {
+                    "description": "Sold",
                     "type": "string"
                 }
             }
